@@ -381,7 +381,7 @@ void CL_BubbleTrail(vec3_t start, vec3_t end);
 
 void CL_Flashlight(int32_t ent, vec3_t pos);
 void CL_FlameEffects(centity_t* ent, vec3_t origin);
-void CL_GenericParticleEffect(vec3_t org, vec3_t dir, vec4_t color, int32_t count, vec4_t run, int32_t dirspread, float alphavel);
+void CL_GenericParticleEffect(vec3_t org, vec3_t dir, vec4_t color, int32_t count, vec4_t run, int32_t dirspread, vec3_t velocity, float alphavel);
 void CL_ParticleSteamEffect(vec3_t org, vec3_t dir, vec4_t color, int32_t count, int32_t magnitude);
 void CL_ColorFlash(int32_t ent, vec3_t pos, int32_t intensity, color4_t color);
 void CL_ParticleSmokeEffect(vec3_t org, vec3_t dir, vec4_t color, int32_t count, int32_t magnitude);
